src/test/deca/syntax/invalid/lexer/special_char_lex.deca
// Description:
//    caracteres speciaux
//
// Resultats:
//    Ligne 13 : Erreur de syntaxe.
//    test_lex ne doit pas donner d'erreur
//
// Historique:
//    cree le 09/01/2023
//

// normal cases
>
<
=
+
-
*
/
%
.
,
(
)
{
}
!
;
==
!=
>=
<=
&&
||

// strange cases
..
++
!+
{(})
<==*